--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "cmath": "c"
+        "cmath": "c",
+        "vec2i.h": "c",
+        "common.h": "c",
+        "grv_common.h": "c",
+        "vec2f.h": "c"
     }
 }
